# sub_maker

./: README.md  pyproject.toml
sub_maker/: main.py  test.py  translator.py
